<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/profile_navi_bar"
        android:icon="@drawable/frag_navi_profile"
        android:title="@string/profile"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/cart_navi_bar"
        android:icon="@drawable/frag_navi_cart"
        android:title="@string/cart"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/category_navi_bar"
        android:icon="@drawable/frag_navi_category"
        android:title="@string/category"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/home_navi_bar"
        android:icon="@drawable/frag_navi_home"
        android:title="@string/home"
        app:showAsAction="always|withText" />
</menu>