<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".activity.ChosenProductActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewpager_product"
                android:layout_width="match_parent"
                android:layout_height="250dp" />
            <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
                android:id="@+id/worm_dots_indicator_CP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                app:dotsColor="@color/dot_indicator"
                app:dotsCornerRadius="8dp"
                app:dotsSize="6dp"
                app:dotsSpacing="3dp"
                app:dotsStrokeColor="@color/dot_indicator"
                app:dotsStrokeWidth="2dp" />

            <TextView
                android:id="@+id/txt_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/persian_iran_sans_font"
                android:gravity="right|center_vertical"
                android:text="نام محصول"
                android:textColor="#000000"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_category"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/persian_iran_sans_font"
                    android:gravity="right|center_vertical"
                    android:text="نام دسته بندی"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txtf_category"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/persian_iran_sans_font"
                    android:gravity="center"
                    android:text="@string/product_category"
                    android:textSize="15sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/txtf_sepcs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/persian_iran_sans_font"
                android:text="@string/specifications"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerv_specs"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtf_toman"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/persian_iran_sans_font"
                android:gravity="center|right|center_vertical"
                android:text="تومان"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_price"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="3.5"
                android:fontFamily="@font/persian_iran_sans_font"
                android:gravity="left|center_vertical"
                android:text="قیمت"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_add_to_cart"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="5.5"
                android:fontFamily="@font/persian_iran_sans_font"
                android:text="@string/add_to_cart"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>