<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/relativeL_user"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/profile_items_background">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toStartOf="@+id/imageView"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_prof_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/persian_iran_sans_font"
                        android:gravity="center_vertical"
                        android:text="نام کاربری"
                        android:textColor="@color/white"
                        android:textDirection="rtl"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/text_prof_number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/persian_iran_sans_font"
                        android:gravity="center_vertical"
                        android:text="شماره تلفن"
                        android:textColor="@color/white"
                        android:textDirection="rtl"
                        android:textSize="16sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    app:srcCompat="@android:mipmap/sym_def_app_icon" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeL_orders"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/profile_items_background"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">

                <TextView
                    android:id="@+id/text_orders"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_toStartOf="@+id/imageV_orders"
                    android:fontFamily="@font/persian_iran_sans_font"
                    android:gravity="center_vertical"
                    android:text="@string/profile_frag_orders"
                    android:textColor="#FFFFFF"
                    android:textDirection="rtl"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageV_orders"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    app:srcCompat="@drawable/baseline_shopping_bag_24" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeL_addresses"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/profile_items_background"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">

                <TextView
                    android:id="@+id/text_addresses"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_toStartOf="@+id/imageV_addresses"
                    android:fontFamily="@font/persian_iran_sans_font"
                    android:gravity="center_vertical"
                    android:text="@string/profile_frag_addresses"
                    android:textColor="#FFFFFF"
                    android:textDirection="rtl"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageV_addresses"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    app:srcCompat="@android:drawable/ic_menu_mylocation" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeL_messages"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/profile_items_background"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">

                <TextView
                    android:id="@+id/text_messages"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_toStartOf="@+id/imageV_messages"
                    android:fontFamily="@font/persian_iran_sans_font"
                    android:gravity="center_vertical"
                    android:text="@string/profile_frag_messages"
                    android:textColor="#FFFFFF"
                    android:textDirection="rtl"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageV_messages"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    app:srcCompat="@android:drawable/sym_action_email" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/profile_items_background"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">

                <TextView
                    android:id="@+id/text_account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_toStartOf="@+id/imageV_account"
                    android:fontFamily="@font/persian_iran_sans_font"
                    android:gravity="center_vertical"
                    android:text="@string/profile_frag_account"
                    android:textColor="#FFFFFF"
                    android:textDirection="rtl"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageV_account"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    app:srcCompat="@drawable/frag_navi_profile" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_margin="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/profile_items_background"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">

                <TextView
                    android:id="@+id/text_support"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_toStartOf="@+id/imageV_support"
                    android:fontFamily="@font/persian_iran_sans_font"
                    android:gravity="center_vertical"
                    android:text="@string/profile_frag_support"
                    android:textColor="#FFFFFF"
                    android:textDirection="rtl"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageV_support"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    app:srcCompat="@android:drawable/stat_sys_phone_call" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>